added new recipe button, refactoring